# SOC-Agent

./: .env.example  .gitignore  README.md  SOC Agent — Complete System Notes  api.py  asset_context.py  case_manager.py  config.py  decision_agent.py  detection_engine.py  feedback_loop.py  generate_benign_pcap.py  generate_pcap.py  generate_ssh_pcap.py  human_review.py  investigation_agent.py  llm_connector.py  log_ingestor.py  main.py  mitre_mapping.py  project_plan.py  pyproject.toml  response_agent.py  soc_runner.py  test_llm.py  threat_intel.py  triage_agent.py
cases/: case_test1_20260419_175639.json  case_test2_20260419_175639.json
data/: benign_test.pcap  generated.pcap  generated_ether.pcap  ssh_test.pcap
frontend/: index.html
